<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="8dp"
    tools:context=".ui.FirstActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ci_add_image"
        android:layout_width="116dp"
        android:layout_height="116dp"
        android:layout_marginTop="160dp"
        android:src="@drawable/ic_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="310dp"
        android:layout_height="47dp"
        android:layout_marginTop="62dp"
        android:padding="8dp"
        android:hint="@string/name"
        android:background="@drawable/bg_edt1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ci_add_image" />

    <EditText
        android:id="@+id/edt_palindrome"
        android:layout_width="310dp"
        android:layout_height="47dp"
        android:layout_marginTop="22dp"
        android:padding="8dp"
        android:hint="@string/palindrome"
        android:background="@drawable/bg_edt1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_name" />
    <Button
        android:id="@+id/btn_check"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:text="@string/check"
        android:background="@drawable/bg_btn1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_palindrome"/>
    <Button
        android:id="@+id/btn_next"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/next"
        android:background="@drawable/bg_btn1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_check"/>
</androidx.constraintlayout.widget.ConstraintLayout>