<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/item_user"
    android:layout_margin="8dp"
    android:padding="16dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ci_user"
        android:layout_width="71dp"
        android:layout_height="71dp"
        android:layout_margin="8dp"
        android:src="@drawable/me"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="14dp"
        android:text="@string/first_name"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/ci_user"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/tv_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginStart="9dp"
        android:text="@string/last_name"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/tv_first_name"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/tv_email_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:text="@string/email"
        android:textColor="@color/hint"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@id/ci_user"
        app:layout_constraintTop_toBottomOf="@id/tv_first_name"/>


</androidx.constraintlayout.widget.ConstraintLayout>